# rsi-loop

./: .coverage  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  auto_fix.md  sources.md
examples/: claude_code_setup.md  quick_start.py
rsi_loop/: __init__.py  analyzer.py  doom_loop_detector.py  fixer.py  loop.py  observer.py  types.py
rsi_loop/integrations/: __init__.py  claude_code.py  generic.py  hf_datasets.py  webhook.py
skills/agent-self-governance/: SKILL.md  risk-classes.json  risk-policy.json
skills/agent-self-governance/scripts/: check_risk_class.py
tests/: test_analyzer.py  test_doom_loop_detector.py  test_fixer.py  test_hf_datasets.py  test_integrations.py  test_loop.py  test_observer.py
