[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rsi-loop"
version = "0.1.0"
description = "Universal self-improvement loop for AI agents. Observe → Analyze → Fix → Verify."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "ClawInfra", email = "alex.chen31337@gmail.com" },
]
keywords = ["ai", "agents", "self-improvement", "rsi", "feedback-loop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
webhook = ["flask>=3.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/clawinfra/rsi-loop"
Repository = "https://github.com/clawinfra/rsi-loop"
Issues = "https://github.com/clawinfra/rsi-loop/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=rsi_loop --cov-report=term-missing"
